--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "prisma generate && next build",
 		"start": "next start",
 		"test": "jest --watch",
 		"commit": "./node_modules/cz-customizable/standalone.js"
 	},
 	"dependencies": {
+		"@prisma/client": "^5.2.0",
 		"@tanstack/react-query": "^4.32.6",
 		"@tanstack/react-query-devtools": "^4.32.6",
 		"@types/node": "20.4.8",
@@ -40,6 +41,7 @@
 		"jest-environment-jsdom": "^29.6.2",
 		"lint-staged": "^13.2.3",
 		"prettier": "^3.0.1",
+		"prisma": "^5.2.0",
 		"ts-jest": "^29.1.1"
 	},
 	"config": {
