--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	"devDependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^14.0.0",
+		"@types/gtag.js": "^0.0.13",
 		"@types/jest": "^29.5.3",
 		"@types/styled-components": "^5.1.26",
 		"@typescript-eslint/eslint-plugin": "^6.2.1",
