--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "prisma generate && next build",
+		"build": "prisma generate && next build && next-sitemap",
 		"start": "next start",
 		"test": "jest --watch",
 		"commit": "./node_modules/cz-customizable/standalone.js"
@@ -41,6 +41,7 @@
 		"jest": "^29.6.2",
 		"jest-environment-jsdom": "^29.6.2",
 		"lint-staged": "^13.2.3",
+		"next-sitemap": "^4.2.2",
 		"prettier": "^3.0.1",
 		"prisma": "^5.2.0",
 		"ts-jest": "^29.1.1"
