--- a/package.json
+++ b/package.json
@@ -11,39 +11,40 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^5.2.0",
-		"@tanstack/react-query": "^4.32.6",
-		"@tanstack/react-query-devtools": "^4.32.6",
-		"@types/node": "20.4.8",
-		"@types/react": "18.2.18",
-		"@types/react-dom": "18.2.7",
+		"@tanstack/react-query": "^5.56.2",
+		"@tanstack/react-query-devtools": "^5.56.2",
+		"@types/node": "22.5.5",
+		"@types/react": "18.3.5",
+		"@types/react-dom": "18.3.0",
 		"axios": "^1.4.0",
-		"eslint": "8.46.0",
-		"eslint-config-next": "13.4.12",
-		"next": "13.4.12",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"eslint": "9.10.0",
+		"eslint-config-next": "^14.2.11",
+		"next": "^14.2.11",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
 		"recoil": "^0.7.7",
-		"styled-components": "^6.0.7",
-		"typescript": "5.1.6"
+		"typescript": "5.6.2"
 	},
 	"devDependencies": {
-		"@testing-library/jest-dom": "^5.17.0",
-		"@testing-library/react": "^14.0.0",
-		"@types/gtag.js": "^0.0.13",
+		"@testing-library/jest-dom": "^6.5.0",
+		"@testing-library/react": "^16.0.1",
+		"@types/gtag.js": "^0.0.20",
 		"@types/jest": "^29.5.3",
-		"@types/styled-components": "^5.1.26",
-		"@typescript-eslint/eslint-plugin": "^6.2.1",
-		"@typescript-eslint/parser": "^6.2.1",
+		"@typescript-eslint/eslint-plugin": "^8.5.0",
+		"@typescript-eslint/parser": "^8.5.0",
+		"autoprefixer": "^10.4.20",
 		"cz-customizable": "^7.0.0",
 		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-prettier": "^5.0.0",
-		"husky": "^8.0.0",
+		"husky": "^9.1.6",
 		"jest": "^29.6.2",
 		"jest-environment-jsdom": "^29.6.2",
-		"lint-staged": "^13.2.3",
+		"lint-staged": "^15.2.10",
 		"next-sitemap": "^4.2.2",
+		"postcss": "^8.4.47",
 		"prettier": "^3.0.1",
 		"prisma": "^5.2.0",
+		"tailwindcss": "^3.4.11",
 		"ts-jest": "^29.1.1"
 	},
 	"config": {
